# RustGameMicroEngine

./: .gitignore  Cargo.toml  README.md  index.html  run_web.sh
crates/render/: Cargo.toml
crates/render/src/: graphics_renderer.rs  lib.rs
engine_core/: Cargo.toml
engine_core/src/: lib.rs  shader.wgsl  state.rs  vertex.rs
engine_core/src/render/: mod.rs
engine_core/src/render/vulkan/: mod.rs  vertex.rs
engine_core/src/utils/: mod.rs
engine_math/: Cargo.toml
engine_math/src/: lib.rs  tranform.rs
engine_utils/: Cargo.toml
engine_utils/src/: lib.rs
src/: engine.rs  lib.rs  main.rs  state.rs  texture.rs
src/entities/: entity.rs  mod.rs  player.rs
src/input/: mod.rs
src/math/: mod.rs  vec2.rs
src/meshs/: default_mesh.rs  mod.rs
src/render/: camera.rs  display.rs  mesh.rs  mod.rs  texture.rs  window.rs
src/render/pipelines/: light.rs  light.wgsl  mod.rs  model.rs  model.wgsl  utils.rs
src/render/renderer/: default_state.rs  display.rs  mod.rs  renderer.rs
src/render/texture/: mod.rs
src/render/vulkan/: mod.rs  physical_device.rs
