[package]
name = "tuto1"
version = "0.1.0"
authors = ["Florian RICHER <florian.richer@unova.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_core = { path = "engine_core" }
simplelog = "0.12.0"
pollster = "0.2"