[package]
name = "tuto1"
version = "0.1.0"
authors = ["Florian RICHER <florian.richer@unova.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
image = { version = "0.24.2", features = [ "png", "jpeg" ], default-features = false }
winit = "0.26.1"
cgmath = "0.18"
wgpu = "0.12.0"
bytemuck = { version = "1.9.1", features = [ "derive" ] }
anyhow = "1.0"
simplelog = "0.12.0"
pollster = "0.2"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
# console_log = "0.2.0"
# wgpu = { version = "0.12", features = ["webgl"]}
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
# web-sys = { version = "0.3", features = [
#     "Document",
#     "Window",
#     "Element",
# ]}